src/k8s/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-backend
  namespace: backend
  labels:
    app: python-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: python-backend
  template:
    metadata:
      labels:
        app: python-backend
    spec:
      containers:
      - name: python-backend
        image: deus666/python-backend:final
        ports:
        - containerPort: 8080
