src/k8s/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: python-backend-ingress
  namespace: backend
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    external-dns.alpha.kubernetes.io/hostname: app.martianov.devops7.test-danit.com
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - app.martianov.devops7.test-danit.com
    secretName: app-martianov-tls
  rules:
  - host: app.martianov.devops7.test-danit.com  
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: python-backend
            port:
              number: 80
